edit the template
part one

--- a/templates/information/info.html
+++ b/templates/information/info.html
@@ -3,17 +3,17 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>info MAHDI ghezavati</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{% static 'css/kube.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/custom.min.css' %}" />
-    <link rel="shortcut icon" href="{%static 'img/favicon.png' %}" />
+	<title>info MAHDI GHEZAVATI</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="{% static 'css/kube.min.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/custom.min.css' %}" />
+	<link rel="shortcut icon" href="{%static 'img/mahdiicon.png' %}" />
 	<link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
@@ -23,21 +23,24 @@
 		}
 	</style>
 </head>
+
 <body>
 	<!-- Navigation -->
 	<div class="main-nav">
 		<div class="container">
 			<header class="group top-nav">
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo">MAHDI</span>
+					<span class="logo">MAHDI</span>
 				</div>
-			    <nav id="navbar-1" class="navbar item-nav">
-				    <ul>
-				        <li class="active"><a href="#about">About</a></li>
-				        <li><a href="#experiences">Experiences</a></li>
-				        <li><a href="#achievements">Achievements</a></li>
-				        <li><a href="#skills">Skills</a></li>
-				    </ul>
+				<nav id="navbar-1" class="navbar item-nav">
+					<ul>
+						<li class="active"><a href="#about">About</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#experiences">Projects</a></li>
+						<li><a href="#Abilities&Education">Abilities and Education</a></li>
+						<li><a href="#achievements">Contact</a></li>
+						
+					</ul>
 				</nav>
 			</header>
 		</div>
@@ -46,63 +49,23 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<p>Hi, I’m Draco the Dragon</p>
+			<p>Hi, I’m MAHDI GHEZAVATI </p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="{% static 'img/ava.jpg'%}" alt="Avatar">
+					<img src="{% static 'img/mahdi.jpg'%}" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<h1>I live in<br><span id="typed"></span></h1>
 				</div>
-				<p>
-					Draco is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
+				<br><br>
+				<h2><strong>&horbar; a bit about me</strong></h2>
+				<p>Hello , Wellcome to my page <br>
+					My name is <strong>MAHDI</strong> . actually iam a <strong>Designer</strong>(to be honest a
+					novcei)<br>
+					MY favorit language is <strong>PYTHON</strong> <br> very very interested in website design
+					,especially <strong>Back-end</strong><br> and i am a great a <strong>Gamer</strong>(no joke)!
 				</p>
 			</div>
-		</div>
-	</div>
-
-	<!-- Work Experience -->
-	<div class="work section second" id="experiences">
-		<div class="container">
-			<h1>Work<br>Experiences</h1>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
-				<li>Web Designer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Wego</a></li>
-				<li>UI/UX Designer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Garuda Indonesia</a></li>
-				<li>System Designer</li>
-			</ul>
-		</div>
-	</div>
-
-	<!-- Award & Achievements -->
-	<div class="award section second" id="achievements">
-		<div class="container">
-			<h1>Award &amp;<br>Achievements</h1>
-			<ul class="award-list list-flat">
-				<li>January 2014</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
-			</ul>
-			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
-			</ul>
-			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
-			</ul>
 		</div>
 	</div>
 
@@ -112,40 +75,101 @@
 			<h1>Technical<br>Skills</h1>
 			<ul class="skill-list list-flat">
 				<li>Web Technology</li>
-				<li>HTML / CSS / SASS / PHP / Javascript</li>
+				<li>HTML / CSS / PYTHON </li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
+				<li>MySQL </li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li> DJANGO </li>
 			</ul>
 		</div>
 	</div>
 
+
+	<!-- Completed Projects -->
+	<div class="work section second" id="experiences">
+		<div class="container">
+			<h1>Completed <br>Projects</h1>
+			<ul class="work-list">
+				<li>2023</li>
+				<li><a href="#">Game</a></li>
+				<li>Web Designer</li>
+			</ul>
+			<ul class="work-list">
+				<li>2025</li>
+				<li><a href="#">one page site </a></li>
+				<li>UI/UX Designer</li>
+			</ul>
+			<ul class="work-list">
+				<li>2025</li>
+				<li><a href="#">MY information(cv)</a></li>
+				<li>System Designer</li>
+			</ul>
+		</div>
+	</div>
+
+
+
+	<!-- Abilities and Education -->
+	<div class="award section second" id="Abilities&Education">
+		<div class="container">
+			<h1>Abilities and  &amp;<br> Education</h1>
+			<ul class="award-list list-flat">
+				<li><h2>MY degree</h2></li>
+				<li>&FilledVerySmallSquare; Experimental diploma</li>
+				<li>&FilledVerySmallSquare; Python proficient certificate</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li><h2>MY abilities</h2></li>
+				<li>&FilledVerySmallSquare; Editing HTML codes to improve efficiency and improve user interaction  with the website</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li><h2>MY interested</h2></li>
+				<li>&FilledVerySmallSquare; Making open world games</li>
+				<li>&FilledVerySmallSquare; Im interested in building and designing websites that give special offers for the section selected by the user !</li>
+				<li>&FilledVerySmallSquare; Teaching everyone </li>
+			</ul>
+		</div>
+	</div>
+
+
+
+	<!-- Contact -->
+	<div class="award section second" id="achievements">
+		<div class="container">
+			<h1>Conversation&amp;<br>communication</h1>
+			<ul class="award-list list-flat">
+				<li>Ways of communication</li>
+				<li>&#9998;  in Telegram with ID :<strong> @IMEHDIWI</strong> </li>
+				<li>&#9998;  in X with ID :<strong> @Meyishonam</strong></li>
+				<li>&#9998; in Github with this link :<strong> <a href="https://github.com/MahdiGhezavati">MahdiGhezavati.Github</a></strong></li>
+			</ul>
+		</div>
+	</div>
+
+
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
+			<h1>To combat criticism about tattoos.</h1>
 		</div>
 	</div>
 
 	<footer>
 		<div class="container">
 			<div class="units-row">
-			    <div class="unit-50">
-			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
-			    </div>
-			    <div class="unit-50">
+				<div class="unit-50">
+					<p>Connection with MAHDI</p>
+				</div>
+				<div class="unit-50">
 					<ul class="social list-flat right">
-						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
-						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li>
+						<li><a href="t.me/imehdiwi"><i class="fa fa-send"></i></a></li>
+						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 					</ul>
-			    </div>
+				</div>
 			</div>
 		</div>
 	</footer>
@@ -153,14 +177,18 @@
 	<!-- Javascript -->
 	<script src="{% static 'js/jquery.min.js' %}"></script>
 	<script src="{% static 'js/typed.min.js' %}"></script>
-    <script src="{% static 'js/kube.min.js' %}"></script>
-    <script src="{% static 'js/site.js' %}"></script>
-    <script>
-		function newTyped(){}$(function(){$("#typed").typed({
-		// Change to edit type effect
-		strings: ["far northern sky", "your galaxy", "everywhere"],
+	<script src="{% static 'js/kube.min.js' %}"></script>
+	<script src="{% static 'js/site.js' %}"></script>
+	<script>
+		function newTyped() { } $(function () {
+			$("#typed").typed({
+				// Change to edit type effect
+				strings: ["iran", "Gorgan", "everywhere"],
 
-		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
-    </script>
+				typeSpeed: 90, backDelay: 700, contentType: "html", loop: !0, resetCallback: function () { newTyped() }
+			}), $(".reset").click(function () { $("#typed").typed("reset") })
+		});
+	</script>
 </body>
+
 </html>
