--- a/templates/information/info.html
+++ b/templates/information/info.html
@@ -22,6 +22,7 @@
 			content: 'MAHDI';
 		}
 	</style>
+
 </head>
 
 <body>
@@ -39,7 +40,7 @@
 						<li><a href="#experiences">Projects</a></li>
 						<li><a href="#Abilities&Education">Abilities and Education</a></li>
 						<li><a href="#achievements">Contact</a></li>
-						
+
 					</ul>
 				</nav>
 			</header>
@@ -61,7 +62,7 @@
 				<h2><strong>&horbar; a bit about me</strong></h2>
 				<p>Hello , Wellcome to my page <br>
 					My name is <strong>MAHDI</strong> . actually iam a <strong>Designer</strong>(to be honest a
-					novcei)<br>
+					novice)<br>
 					MY favorit language is <strong>PYTHON</strong> <br> very very interested in website design
 					,especially <strong>Back-end</strong><br> and i am a great a <strong>Gamer</strong>(no joke)!
 				</p>
@@ -74,7 +75,7 @@
 		<div class="container">
 			<h1>Technical<br>Skills</h1>
 			<ul class="skill-list list-flat">
-				<li>Web Technology</li>
+				<li>Languages</li>
 				<li>HTML / CSS / PYTHON </li>
 			</ul>
 			<ul class="skill-list list-flat">
@@ -96,17 +97,18 @@
 			<ul class="work-list">
 				<li>2023</li>
 				<li><a href="#">Game</a></li>
-				<li>Web Designer</li>
+				<li>Making a snake game using <strong>PYGAME</strong> framework and jupiter editor</li>
 			</ul>
 			<ul class="work-list">
 				<li>2025</li>
 				<li><a href="#">one page site </a></li>
-				<li>UI/UX Designer</li>
+				<li>Designing a single page site</li>
 			</ul>
 			<ul class="work-list">
 				<li>2025</li>
 				<li><a href="#">MY information(cv)</a></li>
-				<li>System Designer</li>
+				<li>Construction and design of a single page site for my information <br> actually a resume to provide
+					information</li>
 			</ul>
 		</div>
 	</div>
@@ -116,20 +118,28 @@
 	<!-- Abilities and Education -->
 	<div class="award section second" id="Abilities&Education">
 		<div class="container">
-			<h1>Abilities and  &amp;<br> Education</h1>
+			<h1>Abilities and &amp;<br> Education</h1>
 			<ul class="award-list list-flat">
-				<li><h2>MY degree</h2></li>
+				<li>
+					<h2>MY degree</h2>
+				</li>
 				<li>&FilledVerySmallSquare; Experimental diploma</li>
 				<li>&FilledVerySmallSquare; Python proficient certificate</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li><h2>MY abilities</h2></li>
-				<li>&FilledVerySmallSquare; Editing HTML codes to improve efficiency and improve user interaction  with the website</li>
+				<li>
+					<h2>MY abilities</h2>
+				</li>
+				<li>&FilledVerySmallSquare; Editing HTML codes to improve efficiency and improve user interaction with
+					the website</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li><h2>MY interested</h2></li>
+				<li>
+					<h2>MY interested</h2>
+				</li>
 				<li>&FilledVerySmallSquare; Making open world games</li>
-				<li>&FilledVerySmallSquare; Im interested in building and designing websites that give special offers for the section selected by the user !</li>
+				<li>&FilledVerySmallSquare; Im interested in building and designing websites that give special offers
+					for the section selected by the user !</li>
 				<li>&FilledVerySmallSquare; Teaching everyone </li>
 			</ul>
 		</div>
@@ -143,9 +153,10 @@
 			<h1>Conversation&amp;<br>communication</h1>
 			<ul class="award-list list-flat">
 				<li>Ways of communication</li>
-				<li>&#9998;  in Telegram with ID :<strong> @IMEHDIWI</strong> </li>
-				<li>&#9998;  in X with ID :<strong> @Meyishonam</strong></li>
-				<li>&#9998; in Github with this link :<strong> <a href="https://github.com/MahdiGhezavati">MahdiGhezavati.Github</a></strong></li>
+				<li>&#9998; in Telegram with ID :<strong> @IMEHDIWI</strong> </li>
+				<li>&#9998; in X with ID :<strong> @Meyishonam</strong></li>
+				<li>&#9998; in Github with this link :<strong> <a
+							href="https://github.com/MahdiGhezavati">MahdiGhezavati.Github</a></strong></li>
 			</ul>
 		</div>
 	</div>
