--- a/templates/information/info.html
+++ b/templates/information/info.html
@@ -101,15 +101,27 @@
 			</ul>
 			<ul class="work-list">
 				<li>2025</li>
-				<li><a href="#">one page site </a></li>
+				<li><a href="https://github.com/MahdiGhezavati/Site-onePAGE.git">one page site </a></li>
 				<li>Designing a single page site</li>
+				<a href="https://github.com/MahdiGhezavati/Site-onePAGE.git"><strong>(link)</strong></a>
 			</ul>
 			<ul class="work-list">
 				<li>2025</li>
-				<li><a href="#">MY information(cv)</a></li>
+				<li><a href="https://github.com/MahdiGhezavati/cv-page-for-me.git">MY information(cv)<a></li>
 				<li>Construction and design of a single page site for my information <br> actually a resume to provide
 					information</li>
+				<a href="https://github.com/MahdiGhezavati/cv-page-for-me.git"><strong>(link)</strong></a>
 			</ul>
+
+			<ul class="work-list">
+				<li>2025</li>
+				<li><a href="https://github.com/MahdiGhezavati/MY_site.git">Travelista<a></li>
+				<li> create site for traveling and booking
+			    </li>
+				<a href="https://github.com/MahdiGhezavati/MY_site.git"><strong>(link)</strong></a>
+			</ul>
+
+
 		</div>
 	</div>
 
