--- a/templates/information/info.html
+++ b/templates/information/info.html
@@ -189,8 +189,8 @@
 				</div>
 				<div class="unit-50">
 					<ul class="social list-flat right">
-						<li><a href="t.me/imehdiwi"><i class="fa fa-send"></i></a></li>
-						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="https://t.me/IMehtiwI"><i class="fa fa-send"></i></a></li>
+						<li><a href="https://x.com/Meyishonam?s=09"><i class="fa fa-twitter"></i></a></li>
 					</ul>
 				</div>
 			</div>
