--- a/templates/information/info.html
+++ b/templates/information/info.html
@@ -42,8 +42,9 @@
 					novice)<br>
 					MY favorit language is <strong>PYTHON</strong> <br> very very interested in website design
 					,especially <strong>Back-end</strong><br> and i am a great a <strong>Gamer</strong>(no joke)!
-					<h5>&FilledVerySmallSquare; spoken language</h5>
+					<p>&FilledVerySmallSquare; spoken language<br>
 					Maybe i should add that English is the second language that i know and i have some fluency 
+					</p>
 				</p>
 			</div>
 		</div>
